# solana-accountsdb-plugin-bigtable

./: .gitignore  Cargo.toml  README.md  build.rs
scripts/: init-bigtable.sh
src/: accountsdb_plugin_bigtable.rs  bigtable.rs  bigtable_client.rs  compression.rs  convert.rs  geyser_plugin_bigtable.rs  lib.rs  parallel_bigtable_client.rs  stored_models.rs
src/bigtable_client/: bigtable_client_account.rs  bigtable_client_account_index.rs  bigtable_client_block_metadata.rs  bigtable_client_transaction.rs
src/parallel_bigtable_client/: account.rs  accounts_history.rs  block_metadata.rs  slot.rs  transaction.rs
storage-proto/: account.proto  confirmed_block.proto  slot.proto  transaction_by_addr.proto
tests/: test_bigtable_conn.rs  test_bigtable_plugin.rs
